--- a/thoughts.html
+++ b/thoughts.html
@@ -22,7 +22,11 @@
 
   <!-- Thoughts Section -->
   <section class="thoughts-page">
-
+<div class="wandering-layer">
+  <div class="wander" data-thought="0"></div>
+  <div class="wander" data-thought="1"></div>
+  <div class="wander" data-thought="2"></div>
+</div>
     <!-- Featured Thought -->
     <div class="featured-thought">
       <blockquote>
