--- a/books.html
+++ b/books.html
@@ -62,7 +62,7 @@
           </p>
           <div class="buy-links">
             <a href="https://www.amazon.in/dp/B0G9X7GXD1?ref_=quick_view_ref_tag" class="buy" target="_blank" rel="noopener">Amazon</a>
-  <a hrefhttps://play.google.com/store/books/details?id=FWmhEQAAQBAJ" class="buy" target="_blank" rel="noopener">Google Books</a>
+  <a href="https://play.google.com/store/books/details?id=FWmhEQAAQBAJ" class="buy" target="_blank" rel="noopener">Google Books</a>
   <a href="https://books2read.com/u/b69Jz6" class="buy" target="_blank" rel="noopener">Books2Read</a>
 
           </div>
@@ -86,7 +86,7 @@
           </p>
           <div class="buy-links">
             <a href="https://www.amazon.in/dp/B0FBRVB61W?ref_=quick_view_ref_tag" class="buy" target="_blank" rel="noopener">Amazon</a>
-  <a hrefhttps://www.amazon.in/dp/B0FBRVB61W?ref_=quick_view_ref_tag" class="buy" target="_blank" rel="noopener">Google Books</a>
+  <a href="https://www.amazon.in/dp/B0FBRVB61W?ref_=quick_view_ref_tag" class="buy" target="_blank" rel="noopener">Google Books</a>
   <a href="https://books2read.com/u/3GRQKQ" class="buy" target="_blank" rel="noopener">Books2Read</a>
 
           </div>
