--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
   </nav>
 
   <!-- Author Bio -->
-  <section class="bio">
-    <img src="author.jpg" alt="Amit Sankhyan" class="author-img">
-
+  <section class="home-hero">
+  <div class="home-hero-text">
+    <h1>Amit Sankhyan</h1>
     <p>
       Amit Sankhyan is someone who observes people closely and believes that the quietest moments often carry the deepest truths.
-      With a background in training, communication, and understanding human behaviour, he values empathy, reflection, and honest connection.
-      His perspective is shaped by listening more than speaking, noticing emotions others may overlook, and finding meaning in everyday
-      experiences that leave a lasting impact.
+      With a background in training, communication, and understanding human behaviour, he values empathy, reflection,
+      and honest connection.His perspective is shaped by listening more than speaking, noticing emotions others may overlook,
+      and finding meaning in everyday experiences that leave a lasting impact.
     </p>
-  </section>
+  </div>
+
+  <div class="home-hero-image">
+    <img src="images/author.jpg" alt="Amit Sankhyan">
+  </div>
+</section>
 
   <!-- Thought -->
  <section class="thought">
