--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
 
   <div class="home-hero-image">
-    <img src="images/author.jpg" alt="Amit Sankhyan">
+    <img src="author.jpg" alt="Amit Sankhyan">
   </div>
 </section>
 
