--- a/books.html
+++ b/books.html
@@ -93,7 +93,30 @@
         </div>
       </div>
     </div>
+<!-- Book 4 -->
+    <div class="book-card" id="book4">
+      <button class="book-header">
+        <span>बांसुरी और दिल के बीच प्रेम</span>
+      </button>
+      <div class="book-body">
+        <img src="book4.jpg" alt="बांसुरी और दिल के बीच प्रेम">
+        <div class="book-info">
+          <h2>बांसुरी और दिल के बीच प्रेम</h2>
+          <p>
+            बांसुरी और दिल के बीच प्रेम, तड़प और खामोश चुनावों की एक कोमल कहानी है।
+            संगीत से बंधा मन और प्रेम की ओर खिंचता दिल—दो आवाज़ें उसे विपरीत दिशाओं में बुलाती हैं।
+            बांसुरी अतीत की पहचान है,दिल भविष्य का साहस।
+            यह कथा सिखाती है कि सच्चा प्रेम पाना नहीं,
+            समझना है—जहाँ बिना शर्त चाहना, छोड़ देना भी प्रेम का ही एक रूप बन जाता है।
+          </p>
+          <div class="buy-links">
+  <a href="https://tinyurl.com/38e35ca4" class="buy" target="_blank" rel="noopener">Google Books</a>
+  <a href="https://books2read.com/u/m2wrGk" class="buy" target="_blank" rel="noopener">Books2Read</a>
 
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
 <script>
