--- a/index.html
+++ b/index.html
@@ -69,7 +69,15 @@
         <p>Love</p>
         <a href="books.html#book3" class="read-more">Read more</a>
       </div>
+      
+       <div class="book">
+        <img src="book4.jpg" alt="बांसुरी और दिल के बीच">
+        <h3>बांसुरी और दिल के बीच</h3>
+        <p>Love</p>
+        <a href="books.html#book4" class="read-more">Read more</a>
+      </div>
     </div>
+    
   </section>
 <script src="js/thoughts-data.js"></script>
 
