--- a/books.html
+++ b/books.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<!-- force pages redeploy -->
   <!-- Navigation -->
   <nav class="nav">
     <div class="nav-name">
